eliminado un astronauta

--- a/index.html
+++ b/index.html
@@ -33,7 +33,14 @@ body{
     top: 40%;
     left: 35%;
 }
+.box-shadow2{
+    top: 40%;
+    left: 90%;
+}
 .box-shadow:hover{
+    box-shadow: 20px 20px 30px rgb(255,0,0,0.6);
+}
+.box-shadow2:hover{
     box-shadow: 20px 20px 30px rgb(255,0,0,0.6);
 }
 .drop-shadow {
@@ -56,6 +63,6 @@ body{
 <body>
     <div class="stars"></div>
     <div class="astronauta box-shadow" title="Con Box Shadow"></div>
-    <div class="astronauta drop-shadow" title="Con Drop Shadow"></div>
+
 </body>
 </html>
